# yolo-fine-tune

./: .gitignore  AGENTS.md  Makefile  README.md  dataset_debugger.py  ingest.py  monitor_training.py  predict_to_labels.py  pyproject.toml  train.py  verify_bbox.py
src/: main.py
src/yolo_fine_tune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
